--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
     "express": "^4.14.0",
     "mongodb": "^2.2.21",
     "request": "^2.79.0"
+  },
+  "devDependencies": {
+    "dotenv": "^4.0.0"
   }
 }
